# -wuzzuf_job_analyser

./: .gitignore  README.md  main.py  pyproject.toml
scrapper/scrapper/spiders/: nlp_engineer_wuzzuf_2024_jan_15.csv  wuzzufspider.py
